<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_popup"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="10dp"
    android:orientation="vertical"
    android:background="@color/white">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:src="?attr/popupMenuBackground" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/header_language_select"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:text="@string/header_language_select"
            android:background="#B8B7B7"
            />

        <Button
            android:id="@+id/bt_lang_en"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="EN"
            />

        <Button
            android:id="@+id/bt_lang_ru"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="RU"
            />

        <TextView
            android:id="@+id/header_notification_interval"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:background="#B8B7B7"
            android:text="@string/header_notification_interval"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/day_selection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:hint=""
            android:textAlignment="center"
            android:textSize="20sp"
            android:inputType="number"
            android:maxLength="3"/>

        <TextView
            android:id="@+id/select_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text=""
            android:gravity="center"/>
        <TimePicker
            android:id="@+id/timePicker"
            android:layout_width="match_parent"
            android:layout_height="362dp"
            android:layout_gravity="top"
            android:layout_marginStart="2dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="2dp" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="end">

    <Button
        android:id="@+id/saveSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:backgroundTint="@color/green_app_darker"
        android:layout_margin="5dp"
        android:text="@string/save"
        android:textColor="@color/white"
        style="?android:attr/buttonBarButtonStyle" />

    <Button
        android:id="@+id/closeSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_margin="5dp"
        android:backgroundTint="@color/red"
        android:text="@string/close"
        android:textColor="@color/white" />
    </LinearLayout>


</LinearLayout>




</FrameLayout>
