<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ExpiryDate</string>
    <string name="title_home">Home</string>
    <string name="title_add">Add</string>
    <string name="title_list">List</string>
    <string name="save_date">Save Date</string>
    <string name="enter_item_name">Enter Item name</string>
    <string name="expiry_notification_title">%1$s is expiring</string>
    <string name="expiry_notification_body">Product %1$s is expiring tomorrow</string>
    <string name="delete">Delete</string>
    <string name="close">Close</string>
    <string name="share">Share</string>
    <string name="shareMessage">Hi, I have some %1s that I don\'t need anymore and expires at %2s. Do you want to have it?</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="placeholder">Placeholder</string>
    <string name="maps_api_key" translatable="false">AIzaSyCjufUCy1GthewZAl_YLQOAJ4Vza_TkbMs</string>
    <string name="preference_file_key" translatable="false">ExpiryDatesPreferences</string>
    <string name="notification_day_offset_key" translatable="false">ExpiryDatesPreferencesNotificationDayOffset</string>
    <string name="notification_hour_key" translatable="false">ExpiryDatesPreferencesNotificationHour</string>
    <string name="notification_minutes_key" translatable="false">ExpiryDatesPreferencesNotificationMinutes</string>
...
    <string name="loading">Loading</string>
    <string name="no_recipe_found">Sorry, no recipe found.</string>
    <string name="map_label">Nearest foodsharing locations:</string>
    <string name="invalidInput">Invalid Input (Must be between 1 and 255 characters long)</string>
    <string name="invalidDate">Invalid Date (Must not be a past date)</string>
    <string name="suggestion">suggestion:</string>
    <string name="settings_string" translatable="false">settings</string>
    <string name="header_language_select">Language Selection</string>
    <string name="header_notification_interval">Notification Interval before Expiration Dates</string>
    <string name="enter_days">Enter days before Notification, current: %1s</string>
    <string name="select_time">Select time to be notified, current: %1s:%2s</string>
    <string name="about_button">About Us</string>  <!-- Should be international -->
    <string name="about_description"> The main idea of this app is to help the users stop wasting
...
